2009-08-27  Mike Kestner <mkestner@novell.com>

	* StartPage.cs: beginnings of a startup page similar to MD.

2009-08-19  Mike Kestner <mkestner@novell.com>

	* ProfilerProcess.cs: new class to manage creation of and comm
	with the profiler.  Initial suspend/resume capability.
	* ProfileSetupDialog.cs: add StartEnabled feature to control logging
	status on startup.
	* ProfileView.cs: use new reader iteration paradigm.

2009-08-04  Mike Kestner <mkestner@novell.com>

	* ProfileView.cs: add SupportsFiltering prop to support action 
	sensitivity in menu.

2009-07-30  Mike Kestner <mkestner@novell.com>

	* Node.cs: add a DescendingValue comparison.

2009-07-15  Mike Kestner <mkestner@novell.com>

	* AllocationsView.cs: make it a ScrolledWindow subclass.
	* CallsView.cs: make it a ScrolledWindow subclass.
	* DisplayOptions.cs: file rename
	* ProfileSetupDialog.cs: add support for stat profiling. default to
	stat profiling.
	* ProfileView.cs: not scrollable, the child views manage their own
	scrolling now. Load profiles by data content instead of explicitly.
	Close the reader when done loading to avoid access sharing problems.
	* StatDetail.cs: notebook to display calls and callers info for 
	statistical hit items.
	* StatList.cs: ordered list widget for statistical hit items.
	* StatStore.cs: list store for statistical profile data.
	* StatView.cs: paned view to hold stat list and detail views and
	managed selection changes.

2009-06-19  Mike Kestner <mkestner@novell.com>

	* CallsStore.cs: add child node compression for filtered libraries.
	Retrieves a list of filtered libraries from the DisplayOptions and 
	"flattens" library calls within the set to hide internal implementation
	nodes.  Prunes the tree to better visualize user code.
	* DisplayOptions.cs: initial pass at a filtering options class. Adds
	ShowSystemNodes option and first pass at a Filters array for filtered
	libraries which will be user configurable eventually.