@@ -1,3 +1,8 @@
+2009-08-28  Mike Kestner <mkestner@novell.com>
+
+	* MainWindow.cs : load and save History class. add LogInfo items
+	to history when new profiles are created and loaded.
+
 2009-08-27  Mike Kestner <mkestner@novell.com>
 
 	* MainWindow.cs : use new StartPage widget. Some refactoring for
